# aibedo

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  README.rst  download_data.py  env_nosunet.yaml  env_simple.yaml  environment.yaml  environment_cpu.yml  predict_models.py  pyproject.toml  requirements.txt  resume_training.py  run.py  save_preds_to_xarray.py  setup.py  sunet_loss_monthly_v2.py  sunetlstm_compress_gpu.py  test_models.py  train_all_esm_and_test_on_merra2.py  train_eof.py
TemporalModels/: README.md  experiment_mtslstm.ipynb
aibedo/: README.md  __init__.py  constants.py  interface.py  test.py  train.py  train_eof.py
aibedo_salva/: README.md  constants.py  env.yaml  interface.py  test.py  train.py
analysis/: animate_predictions_era5_2022-07-21.py  group_runs_on_cesm.py  plot_esm_performance_on_other_esms.py  plot_esm_performances.py  plot_esm_performances_many_groups_july8.py
convert_nc_sph_grid/: README.md  data_loader.py  input_generation.py  interpolate.py
data/: README.md  download_data.py  download_data_minimal.sh
docs/: Makefile  make.bat
environment/: README.md  env_evaluation.yaml  env_train_cpu.yaml  env_train_gpu.yaml
exploredata/: ExploreDataOutput.ipynb
gallery/: README.txt  plot_aibedo_predictions.py
krcode/: Untitled.ipynb  spherical_triangulation.ipynb
notebooks/: 2022-07-13-reload_model_plot_predictions.ipynb  2022-07-20-negative-precip-preds-era5.ipynb  2022-07-27-negative-precip-preds-cesm2.ipynb  2022-07-27-negative-precip-preds-era5-cleaner.ipynb  2022-08-12-zonal-errors.ipynb  DEMO.ipynb  (+11 more)
out_dir/: README.md
(+742 files in other folders)
